--- a/app/views/counseling/index.html.erb
+++ b/app/views/counseling/index.html.erb
@@ -1,1 +1,44 @@
-hello
+<!DOCTYPE html>
+
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="試みの地平線のデータベースです">
+  <meta name="keyword" content="悩み相談,北方謙三">
+</head>
+
+<body>
+  <header class="title">
+    <%= image_tag 'kokoromi.png' %>
+  </header>
+
+  <div class="wrapper">
+
+    <div class="sidebar">
+      <ul class="search">
+        <li>年齢</li>
+          <%= select_tag(:age, options_for_select((18..85).to_a)) %>
+        <li>現在の年齢</li>
+          <%= select_tag(:age, options_for_select((18..85).to_a)) %>
+        <li>性別</li>
+        <li>カテゴリー</li>
+        <li>都道府県</li>
+        <li>掲載号</li>
+      </ul>
+    </div>
+
+    <%= render partial: "counceling" %>
+    <%# <%= render partial: "counceling/counceling", locals: { tweet: tweet} %>
+
+  </div>
+
+  <footer>
+    <p>免責事項みたいなアレ</p>
+  </footer>
+
+</body>
+
+
+
+</html>
