db作成、seedファイルの読み込み

--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -27,9 +27,9 @@
       color: #FFFFEE;
     }
   }
-  .counceling {
+  .counseling {
     width: 100vw;
-    .counceling-text {
+    .counseling-text {
       // height: 500px;
       padding: 20px;
       margin: 20px 20px 20px 0px;
