--- a/app/views/counseling/_counseling.html.erb
+++ b/app/views/counseling/_counseling.html.erb
@@ -1,6 +1,6 @@
-   <div class="counceling">
+   <div class="counseling">
       <%# 繰り返し表示で出す。インデックスはランダムか？？ %>
-      <div class="counceling-text">
+      <div class="counseling-text">
         <h2>愛してるのひと言がどうしても言えない。</h2>
         <p class="profile">東京都 バービーボイズ 17歳 男</p>
         <%= link_to 'Twitter', "https://twitter.com/share?url=#{request.url}", title: 'Twitter', target: '_blank' %>
