--- a/app/views/counseling/index.html.erb
+++ b/app/views/counseling/index.html.erb
@@ -28,8 +28,8 @@
       </ul>
     </div>
 
-    <%= render partial: "counceling" %>
-    <%# <%= render partial: "counceling/counceling", locals: { tweet: tweet} %>
+    <%= render partial: "counseling" %>
+    <%# <%= render partial: "counseling/counseling", locals: { tweet: tweet} %>
 
   </div>
 
