--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -16,9 +16,12 @@
 .wrapper {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  height: 100%;
   background-color: #333333;
   .sidebar {
+    // position: -webkit-sticky;
+    position: sticky;
+    height: 600px;
     width: 280px;
     margin: 20px 20px 20px 20px;
     background-color: #444444;
@@ -28,23 +31,57 @@
     }
   }
   .counseling {
+    height: 100vh;
     width: 100vw;
+    overflow: scroll;
     .counseling-text {
       // height: 500px;
       padding: 20px;
-      margin: 20px 20px 20px 0px;
+      margin: 0px 20px 0px 0px;
       background-color: #EEEEEE;
 
       & > h2 {
-        font-size: 28px;
-        margin-bottom: 8px;
+        font-size: 32px;
+        margin: 8px 0 12px 8px;
+        font-weight: bold;
       }
-      .profile {
-        font-size: 16px;
-        margin-bottom: 36px;
+      & > ul {
+        margin: 36px 0 36px 0;
+        & > li {
+          margin-bottom: 12px;
+        }
+      }
+      .line {
+        margin-top: 32px;
+      }
+      .profiles {
+        height: 20px;
+        margin-left: 20px;
+        .profile {
+          font-size: 12px;
+          font-weight: bold;
+          margin-bottom: 4px;
+        }
+        .profile2 {
+          font-size: 12px;
+          font-weight: bold;
+        }
+      }
+      .issues {
+        font-size: 12px;
+        margin: 0 36px 20px 0;
+        text-align: right;
+        .bold {
+          font-weight: bold;
+        }
       }
     }
-    
-
   }
+  .mgr {
+    margin-right: 20px;
+  }
+}
+.footer {
+  bottom: 0;
+  height: 80px;
 }
