--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -33,7 +33,7 @@
     }
   }
   .counseling {
-    height: 100vh;
+    height: 640px;
     width: 100vw;
     overflow: scroll;
     .counseling-text {
@@ -55,6 +55,11 @@
       }
       & > hr {
         margin-top: 24px;
+        display: block;
+        width: 100%;
+        height: 1px;
+        background-color: #444444;
+        border: 0;
       }
       .profiles {
         height: 40px;
@@ -88,6 +93,8 @@
   }
 }
 .footer {
+  background-color: #222222;
+  border-top: solid 1px #444444;
   bottom: 0;
   height: 80px;
 }
