--- a/app/views/counseling/index.html.erb
+++ b/app/views/counseling/index.html.erb
@@ -17,9 +17,12 @@
 
     <div class="sidebar">
       <ul class="search">
+        <%= search_form_for @q, url: search_path do |f| %>
+          <%= f.label :question_cont %>
+          <%= f.search_field :question_cont %>
+          <%= f.submit %>
+        <% end %>
         <li>年齢</li>
-          <%= select_tag(:age, options_for_select((18..85).to_a)) %>
-        <li>現在の年齢</li>
           <%= select_tag(:age, options_for_select((18..85).to_a)) %>
         <li>性別</li>
         <li>カテゴリー</li>
