--- a/app/views/counseling/_sidebar.html.erb
+++ b/app/views/counseling/_sidebar.html.erb
@@ -1,22 +1,38 @@
     <div class="sidebar">
       <ul class="search">
         <%= search_form_for @q, url: search_path do |f| %>
-          <li><%= f.label :question, "相談から検索" %>
-            <%= f.search_field :question_cont %></li>
-          <li><%= f.label :answer, "回答から検索" %>
-            <%= f.search_field :answer1_or_answer2_or_answer3_cont %></li>
-          <li><%= f.label :question_and_answer, "相談と回答から検索" %>
-            <%= f.search_field :question_or_answer1_or_answer2_or_answer3_cont %></li>
-          <li><%= f.label :age, "年齢、学年" %>
+          
+          <li class="question_search">
+            <%= icon 'fas', 'frown-open', class: 'search_icon' %><%= f.label :question, "相談から" %>
+            <%= f.search_field :question_cont, placeholder: "キーワードを入力", class: 'text_field' %></li>
+          
+          <li class="answer_search">
+            <%= icon 'fas', 'pen-nib', class: 'search_icon' %><%= f.label :answer, "回答から" %>
+            <%= f.search_field :answer1_or_answer2_or_answer3_cont, placeholder: "キーワードを入力", class: 'text_field' %></li>
+          
+          <li class="q_and_a_search">
+            <%= icon 'fas', 'mail-bulk', class: 'search_icon' %><%= f.label :question_and_answer, "相談と回答から" %>
+            <%= f.search_field :question_or_answer1_or_answer2_or_answer3_cont, placeholder: "キーワードを入力", class: 'text_field' %></li>
+          
+          <li class="age_search">
+            <div class="age_wrap"><%= icon 'fas', 'id-card', class: 'search_icon' %><%= f.label :age, "年齢、学年" %></div>
             <%= f.select :age1_or_age2_cont,
               ['', 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, '?',
               '中学', '高校', '大学', '専門学校'] %></li>
-          <li><%= f.label :sex, "性別" %>
-            <%= f.radio_button :sex1_or_sex2_eq, '', {:checked => true} %>指定なし
-            <%= f.radio_button :sex1_or_sex2_eq, '男' %>男
-            <%= f.radio_button :sex1_or_sex2_eq, '女' %>女</li>
+          
+          <li class="sex_search">
+            <div class="sex_wrap"><%= icon 'fas', 'venus-mars', class: 'search_icon' %><%= f.label :sex, "性別" %></div>
+            <div class="button_wrap">
+              <label><%= f.radio_button :sex1_or_sex2_eq, '', {:checked => true} %>指定なし</label>
+              <label><%= f.radio_button :sex1_or_sex2_eq, '男' %>男</label>
+              <label><%= f.radio_button :sex1_or_sex2_eq, '女' %>女</label>
+            </div>
+          </li>
+          
           <%# <li>カテゴリー</li> %>
-          <li><%= f.label :prefecture, "都道府県から検索" %>
+          
+          <li class="prefecture_search">
+            <div class="prefecture_wrap"><%= icon 'fas', 'map-marker-alt', class: 'search_icon' %><%= f.label :prefecture, "都道府県" %></div>
             <%= f.select :prefecture1_or_prefecture2_eq,
               [' ', '北海道', '青森県', '岩手県', '宮城県', '秋田県', '山形県','福島県', '茨城県',
               '栃木県', '群馬県', '埼玉県', '千葉県', '東京都', '神奈川県', '新潟県', '富山県',
@@ -24,10 +40,12 @@
               '滋賀県', '京都府', '大阪府', '兵庫県', '奈良県', '和歌山県','鳥取県', '島根県',
               '岡山県', '広島県', '山口県', '徳島県', '香川県', '愛媛県', '高知県','福岡県',
               '佐賀県', '長崎県', '熊本県', '大分県', '宮崎県', '鹿児島県', '沖縄県'] %></li>
-          <li><%= f.label :issue, "掲載誌から検索" %>
+          
+          <li class="issue_search">
+            <%= icon 'fas', 'book-open', class: 'search_icon' %><%= f.label :issue, "掲載誌" %>
             <%= f.select :issue1_or_issue2_or_issue3_eq,
               [' ', '試みの地平線 (1986年1月10日号〜1988年7月25日号)'] %></li>
-          <li><%= f.submit %></li>
+          <li><%= f.submit "検索", class: 'submit' %></li>
         <% end %>
       </ul>
     </div>
