--- a/app/views/counseling/index.html.erb
+++ b/app/views/counseling/index.html.erb
@@ -10,7 +10,7 @@
 
 <body>
   <header class="title">
-    <%= link_to image_tag('kokoromi.png', class: 'img'), root_path %>
+    <%# <%= link_to image_tag('kokoromi.png', class: 'img'), root_path %> %>
   </header>
 
   <div class="wrapper">
