--- a/app/views/counseling/index.html.erb
+++ b/app/views/counseling/index.html.erb
@@ -10,7 +10,7 @@
 
 <body>
   <header class="title">
-    <%# <%= link_to image_tag('kokoromi.png', class: 'img'), root_path %> %>
+    <img src="https://daedalustudio.com/wp-content/uploads/2019/04/ikea_2019_logo.png" alt="" class="img">
   </header>
 
   <div class="wrapper">
